// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id                             String    @id @default(uuid()) @db.Uuid
  email                          String    @unique
  passwordHash                   String    @map("password_hash")
  username                       String?
  faculty                        String?
  degree                         String?
  graduationYear                 Int?      @map("graduation_year")
  matriculationYear              Int?      @map("matriculation_year")
  lifestylePreferences           String?   @map("lifestyle_preferences") @db.Text
  graduationRequirements         Json?     @map("graduation_requirements")
  academicProfileChangeAllowedAt DateTime? @map("academic_profile_change_allowed_at")

  semesters                 Semester[]
  plannedModules            PlannedModule[]
  moduleReviews             ModuleReview[]
  publicPlans               PublicPlan[]               @relation("AuthoredPlans")
  planReviews               PlanReview[]
  moduleUpdateNotifications ModuleUpdateNotification[]

  @@map("users")
}

model NusModule {
  moduleCode              String   @id @map("module_code")
  title                   String
  description             String?
  moduleCredit            String   @map("module_credit")
  department              String?
  faculty                 String
  gradingBasisDescription String?  @map("grading_basis_description")
  prerequisite            String?
  preclusion              String?
  corequisite             String?
  workload                Json?
  semesterData            Json?    @map("semester_data")
  attributes              Json?
  lastUpdated             DateTime @default(now()) @updatedAt @map("last_updated")

  plannedModules PlannedModule[]
  moduleReviews  ModuleReview[]

  @@map("nus_modules")
}

model Semester {
  id             String @id @default(uuid()) @db.Uuid
  acadYear       String @map("acad_year") // e.g., "2023/2024"
  semesterNumber Int    @map("semester_number") // 1 or 2
  userId         String @map("user_id") @db.Uuid

  user           User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  plannedModules PlannedModule[]

  @@map("semesters")
}

model PlannedModule {
  id              String              @id @default(uuid()) @db.Uuid
  semesterId      String?             @map("semester_id") @db.Uuid
  userId          String              @map("user_id") @db.Uuid
  moduleCode      String              @map("module_code")
  status          PlannedModuleStatus @default(SELECTED)
  expectedGrade   String?             @map("expected_grade")
  actualGrade     String?             @map("actual_grade")
  selectedLessons Json?               @map("selected_lessons")

  user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  semester Semester? @relation(fields: [semesterId], references: [id], onDelete: Cascade)
  module   NusModule @relation(fields: [moduleCode], references: [moduleCode], onDelete: Restrict)

  @@index([userId])
  @@index([status])
  @@map("planned_modules")
}

enum PlannedModuleStatus {
  SELECTED
  EXEMPTED
  PLANNED
}

model ModuleUpdateNotification {
  id             String                         @id @default(uuid()) @db.Uuid
  userId         String                         @map("user_id") @db.Uuid
  moduleCode     String                         @map("module_code")
  acadYear       String                         @map("acad_year")
  semesterNumber Int                            @map("semester_number")
  changes        Json
  fingerprint    String
  status         ModuleUpdateNotificationStatus @default(PENDING)
  attempts       Int                            @default(0)
  lastError      String?                        @map("last_error") @db.Text
  sentAt         DateTime?                      @map("sent_at")
  createdAt      DateTime                       @default(now()) @map("created_at")
  updatedAt      DateTime                       @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, moduleCode, acadYear, semesterNumber, fingerprint])
  @@index([status, attempts])
  @@map("module_update_notifications")
}

enum ModuleUpdateNotificationStatus {
  PENDING
  SENT
  FAILED
}

model ModuleReview {
  id         String   @id @default(uuid()) @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  moduleCode String   @map("module_code")
  rating     Int // 1-10 scale
  content    String   @db.Text
  createdAt  DateTime @default(now()) @map("created_at")

  user   User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  module NusModule @relation(fields: [moduleCode], references: [moduleCode], onDelete: Cascade)

  @@map("module_reviews")
}

model PublicPlan {
  id                String   @id @default(uuid()) @db.Uuid
  authorId          String   @unique @map("author_id") @db.Uuid
  title             String
  description       String?  @db.Text
  planSnapshot      Json     @map("plan_snapshot") // Stores the frozen state of the user's semesters
  planImageDataUrl  String?  @map("plan_image_data_url") @db.Text
  coverImageDataUrl String?  @map("cover_image_data_url") @db.Text
  upvotes           Int      @default(0)
  viewCount         Int      @default(0) @map("view_count")
  createdAt         DateTime @default(now()) @map("created_at")

  author  User         @relation("AuthoredPlans", fields: [authorId], references: [id], onDelete: Cascade)
  reviews PlanReview[]

  @@map("public_plans")
}

model PlanReview {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  publicPlanId String   @map("public_plan_id") @db.Uuid
  rating       Int // 1-10 scale
  content      String   @db.Text
  createdAt    DateTime @default(now()) @map("created_at")

  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  publicPlan PublicPlan @relation(fields: [publicPlanId], references: [id], onDelete: Cascade)

  @@map("plan_reviews")
}
