@startuml Academic_Planning_System_ERD

title ERD for Academic Planning System

hide circle
top to bottom direction
skinparam linetype ortho
skinparam shadowing false
skinparam nodesep 75
skinparam ranksep 90
skinparam entity {
    BackgroundColor #FFFFFF
    BorderColor #2F3A4A
    FontColor #18202B
}

entity "nus_modules" as nus_modules {
    * module_code : VARCHAR <<PK>>
    --
    title : VARCHAR
    description : TEXT NULL
    module_credit : TEXT
    department : VARCHAR NULL
    faculty : VARCHAR
    grading_basis_description : VARCHAR NULL
    prerequisite : TEXT NULL
    preclusion : TEXT NULL
    corequisite : TEXT NULL
    workload : JSONB NULL
    semester_data : JSONB NULL
    attributes : JSONB NULL
    last_updated : TIMESTAMP
}

entity "planned_modules" as planned_modules {
    * id : UUID <<PK>>
    --
    semester_id : UUID <<FK, NULL>>
    user_id : UUID <<FK>>
    module_code : VARCHAR <<FK>>
    status : PlannedModuleStatus
    expected_grade : VARCHAR NULL
    actual_grade : VARCHAR NULL
    selected_lessons : JSONB NULL
}

entity "module_reviews" as module_reviews {
    * id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    module_code : VARCHAR <<FK>>
    rating : INTEGER
    content : TEXT
    created_at : TIMESTAMP
}

entity "semesters" as semesters {
    * id : UUID <<PK>>
    --
    acad_year : VARCHAR
    semester_number : INTEGER
    user_id : UUID <<FK>>
}

entity "users" as users {
    * id : UUID <<PK>>
    --
    email : VARCHAR <<UQ>>
    password_hash : VARCHAR
    username : VARCHAR NULL
    faculty : VARCHAR NULL
    degree : VARCHAR NULL
    graduation_year : INTEGER NULL
    matriculation_year : INTEGER NULL
    lifestyle_preferences : TEXT NULL
    graduation_requirements : JSONB NULL
    academic_profile_change_allowed_at : TIMESTAMP NULL
}

entity "module_update_notifications" as module_update_notifications {
    * id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    module_code : VARCHAR
    acad_year : VARCHAR
    semester_number : INTEGER
    changes : JSONB
    fingerprint : VARCHAR
    status : ModuleUpdateNotificationStatus
    attempts : INTEGER
    last_error : TEXT NULL
    sent_at : TIMESTAMP NULL
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "public_plans" as public_plans {
    * id : UUID <<PK>>
    --
    author_id : UUID <<FK, UQ>>
    title : VARCHAR
    description : TEXT NULL
    plan_snapshot : JSONB
    plan_image_data_url : TEXT NULL
    cover_image_data_url : TEXT NULL
    upvotes : INTEGER
    view_count : INTEGER
    created_at : TIMESTAMP
}

entity "plan_reviews" as plan_reviews {
    * id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    public_plan_id : UUID <<FK>>
    rating : INTEGER
    content : TEXT
    created_at : TIMESTAMP
}

' Layout hints keep the NUS catalog as the root, followed by module-linked
' records, user planning data, and finally user-owned sharing/notification data.
planned_modules -[hidden]right- module_reviews
semesters -[hidden]right- users
module_update_notifications -[hidden]right- public_plans
public_plans -[hidden]right- plan_reviews

nus_modules ||--o{ planned_modules
nus_modules ||--o{ module_reviews

planned_modules }o--o| semesters

semesters }o--|| users
planned_modules }o--|| users
module_reviews }o--|| users

users ||--o{ module_update_notifications
users ||--o| public_plans
users ||--o{ plan_reviews
public_plans ||--o{ plan_reviews

@enduml
